--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <a href="index.html">
-      <img src="img/logo-white.svg" alt="PetLife">
+      <img src="img/logo-white.svg" PetLife">
       <img src="" alt="">
     </a>
 
@@ -28,7 +28,7 @@
 
   <main>
     <section id="inicio">
-      <img class="start-img" src="/img/start-img.svg" alt="">
+      <img class="start-img" src="img/start-img.svg" alt="">
 
       <div>
         <h1>Garanta uma vida longa e cheia de alegria para o seu melhor amigo</h1>
@@ -39,7 +39,7 @@
         <a class="botao-transparente" href="#clinica">Conheça nossa clínica</a>
       </div>
 
-      <img class="absolute" src="/img/shape.svg" alt="">
+      <img class="absolute" src="img/shape.svg" alt="">
     </section>
 
     <section id="clinica">
@@ -60,7 +60,7 @@
         </ul>
       </div>
 
-      <img src="/img/clinic-img.svg" alt="">
+      <img src="img/clinic-img.svg" alt="">
 
     </section>
 
@@ -72,7 +72,7 @@
       <div>
         <h2>Venha conferir o nosso petshop e farmácia</h2>
 
-        <img src="/img/shop-img.svg" alt="">
+        <img src="img/shop-img.svg" alt="">
 
         <p class="paragrafo">
           Além de ser uma clínica veterinária de confiança, também contamos com um completo petshop e farmácia. Nosso petshop oferece uma ampla seleção de produtos de alta qualidade, desde alimentos balanceados e petiscos deliciosos até brinquedos divertidos e acessórios elegantes para o seu pet. Na nossa farmácia, você encontrará uma variedade de medicamentos, produtos de cuidados e suplementos recomendados pelos nossos veterinários, garantindo que o bem-estar e a saúde do seu amado pet estejam sempre em boas mãos. Tudo o que você precisa para cuidar e mimar o seu pet está aqui, no nosso petshop e farmácia, com a mesma dedicação e qualidade que nos tornou referência na área veterinária.
