correção link css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="description" content="Garanta uma vida longa e cheia de alegria para o seu melhor amigo">
   <title>PetLife</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
@@ -14,15 +14,15 @@
 <body>
   <header>
     <a href="index.html">
-      <img src="img/logo-white.svg" PetLife">
+      <img src="img/logo-white.svg" alt="PetLife"">
       <img src="" alt="">
     </a>
 
     <nav>
-      <a href="#inicio">Início</a>
-      <a href="#clinica">Clínica</a>
-      <a href="#farmacia">Farmácia</a>
-      <a href="#duvidas">Dúvidas</a>
+      <a href=" #inicio">Início</a>
+    <a href="#clinica">Clínica</a>
+    <a href="#farmacia">Farmácia</a>
+    <a href="#duvidas">Dúvidas</a>
     </nav>
   </header>
 
@@ -157,7 +157,7 @@
     Desenvolvido por <a href="https://github.com/carrlateixxeira" target="_blank">@carrlateixxeira</a> na trilha Start na Programação da OneBitCode.
   </div>
 
-  <script src="/js/javascript.js"></script>
+  <script src="js/javascript.js"></script>
 
 </body>
 
